--- a/templates/about.ejs
+++ b/templates/about.ejs
@@ -2,8 +2,11 @@
 
 <%- include("./Const/header.ejs") %>
 
-<%- include("./Const/head.ejs")%>
-<p>Created By <%=name%></p>
-<img src="/images/sergi.jpg" alt="mama 7elwa" class="portrait">
+    <%- include("./Const/head.ejs")%>
 
-<%- include("./Const/footer.ejs") %>
+        <p>This Site was created by
+            <%=name%>. It uses data from mapbox.com and darksky.net</p>
+
+        <img src="/images/sergi.jpg" alt="mama 7elwa" class="portrait">
+
+        <%- include("./Const/footer.ejs") %>
